--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="./assets/images/birthday project.png" height="200"/>
     <hr>
     <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Mee</a>
+    <a href="./public/contact.html">Contact Me</a>
 
     
 </body>
